--- a/css/log-in.css
+++ b/css/log-in.css
@@ -7,9 +7,6 @@ body {
   max-width: 450px;
   margin: auto;
   text-align: center;
-}
-
-.container * {
   border-radius: 3px;
   margin-top: 1rem;
 }
@@ -22,24 +19,26 @@ body {
 }
 
 .login-form .login-title {
-  font-size: 38px;
+  font-size: 2.4rem;
   font-weight: 300;
-  margin: 0px 0px 45px 0px;
+  margin-bottom: 2rem;
 }
 
 .login-form .login-input {
   display: block;
-  margin: 20px auto;
+  margin-bottom: 20px;
   width: 100%;
   padding: 15px;
   font-size: 18px;
-  border: 2px solid var(--border-color);
+  /* border: 2px solid var(--border-color); */
+  border: 2px solid red;
 }
 
 .login-form .login-input.button {
   border: none;
   color: white;
-  background: #15CD72;
+  background: #405F73;
+  border: 2px solid red;
 }
 
 .login-forgot {
