--- a/css/log-in.css
+++ b/css/log-in.css
@@ -1,8 +1,3 @@
-html,
-body {
-  background: var(--dark-color);
-}
-
 .container {
   max-width: 450px;
   margin: auto;
@@ -30,13 +25,14 @@ body {
   width: 100%;
   padding: 15px;
   font-size: 18px;
+  color: var(--font-color);
   border: 2px solid var(--border-color);
 }
 
 .login-form .login-input.button {
   border: none;
   color: white;
-  background: #405F73;
+  background: var(--element-color);
 }
 
 .login-forgot {
