--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,15 @@
 :root {
   --max-width: 900px;
-  --navbar-height: 50px;
+  --navbar-height: 3rem;
   --dark-color: #202125;
   --font-color: #565656;
   --yellow-color: #edaf24;
   --border-color: #e7e7e7;
   --paper-color: #f5f5f5;
+  --element-color: #405F73;
+}
+
+html,
+body {
+  background: var(--dark-color);
 }
