--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
   --navbar-height: 3rem;
   --dark-color: #202125;
   --font-color: #565656;
-  --yellow-color: #edaf24;
+  --yellow-color: #ffa600;
   --border-color: #e7e7e7;
   --paper-color: #f5f5f5;
-  --element-color: #405F73;
+  --element-color: #003f5c;
 }
 
 html,
