--- a/css/navbar.css
+++ b/css/navbar.css
@@ -44,6 +44,7 @@
 
 .navbar-item a:hover {
   background-color: var(--yellow-color);
+  color: var(--dark-color);
 }
 
 .navbar-item .link-button {
@@ -56,7 +57,7 @@
   border: none;
   border-radius: 50px;
   transition: all 0.3 ease 0s;
-  color: black;
+  color: var(--dark-color);
 }
 
 .search-input {
@@ -83,7 +84,6 @@ p {
   color: var(--paper-color);
   margin: 0 0 1.5em 0;
 }
-
 
 .container h1 {
   margin-top: 2em;
