--- a/css/filmGrid.css
+++ b/css/filmGrid.css
@@ -1,4 +1,12 @@
+.section-gridfilms {
+  display: grid;
+  grid-template-columns: repeat(5, 265px);
+  justify-content: center;
+}
+
 .section-gridfilms .gridfilms {
+  margin-top: 4rem;
+  /* margin-left: 1rem; */
   display: block;
   cursor: pointer;
   position: relative;
@@ -12,18 +20,19 @@
 .gridfilms-image img {
   width: 100%;
   vertical-align: top;
+  border-radius: 21px;
 }
 
 .gridfilms-description {
-  background-color: rgba(0, 0, 0, .4);
+  background-color: rgba(265px, 265px, 265px, .1);
   position: absolute;
   left: 0;
   top: 0;
   right: 0;
   bottom: 0;
   display: none;
-  align-items: center;
-  justify-content: center;
+  align-items: initial;
+  justify-content: right;
   color: white;
   text-align: center;
 }
@@ -35,6 +44,34 @@
 .gridfilms-fav {
   width: 200px;
   margin: 5px;
-  text-align: center;
+  color: white;
+  font-weight: bold;
+  text-align: right;
   display: inline-block;
+}
+
+.gridfilms-comments {
+  width: 200px;
+  margin: 5px;
+  color: white;
+  font-weight: bold;
+  text-align: left;
+  display: inline-block;
+}
+
+.gridfilms-comments .comments-age {
+  display: inline-block;
+  margin-bottom: 1em;
+  color: crimson;
+}
+
+
+.comments-description {
+  color: aqua;
+}
+
+.comments-synopsis {
+  display: inline-block;
+  margin-top: 0.5em;
+  color: aqua;
 }
