transparencia mejorada, cambiar colores de letra

--- a/css/filmGrid.css
+++ b/css/filmGrid.css
@@ -24,7 +24,7 @@
 }
 
 .gridfilms-description {
-  background-color: rgba(265px, 265px, 265px, .1);
+  background-color: rgba(0, 0, 0, .85);
   position: absolute;
   left: 0;
   top: 0;
