--- a/css/footer.css
+++ b/css/footer.css
@@ -6,24 +6,37 @@ body {
   font-family: inherit;
 }
 
+h1 {
+  margin-top: var(--navbar-height);
+}
+
 .container-video {
-  display: block;
+  display: flex;
   justify-content: center;
   margin-top: 4rem;
   cursor: pointer;
-  width: 50%;
 }
 
 .footer {
   align-self: flex-end;
   min-width: 100vw;
-  height: 5rem;
+  height: 9rem;
   text-align: center;
   background-color: var(--element-color);
   color: var(--paper-color);
+  font-size: 1.3rem;
 }
 
-i {
-  font-size: 2.5rem;
+.container-footer a {
+  color: orangered;
+  text-decoration: none;
+}
+
+.i-color-l {
+  color: red;
+}
+
+
+.i-color {
   color: var(--yellow-color);
 }
