--- a/css/comingSoon.css
+++ b/css/comingSoon.css
@@ -10,7 +10,7 @@ body {
 .container {
   width: 90%;
   margin: auto;
-  max-width: 900px;
+  max-width: 100vw;
   overflow: hidden;
 }
 
@@ -28,6 +28,7 @@ body {
 
 .footer {
   display: flex;
+  align-self: flex-end;
   align-items: center;
   justify-content: center;
   height: 6rem;
