--- a/css/filmGridNews.css
+++ b/css/filmGridNews.css
@@ -1,7 +1,7 @@
 .container-gridfilms {
   display: grid;
   /* grid-template-columns: repeat(5, minmax(250px, 500px)); */
-  grid-template-columns: repeat(5, 250px);
+  grid-template-columns: repeat(2, 250px);
   justify-content: center;
   gap: .8rem;
 }
@@ -44,17 +44,17 @@
   text-align: left;
 }
 
-.gridfilms-fav {
+.gridfilms-play {
   position: absolute;
-  top: 0;
+  bottom: 0;
   right: 0;
   width: 200px;
   margin: 5px;
   font-weight: bold;
   text-align: right;
   display: inline-block;
-  font-size: 1.3em;
-  color: yellow;
+  font-size: 3.3em;
+  color: var(--yellow-color);
 }
 
 .gridfilms-comments {
@@ -68,8 +68,8 @@
 
 .comments-age {
   display: inline-block;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   color: var(--paper-color);
 }
 
@@ -102,4 +102,14 @@ hr {
   width: calc(calc(calc(250px*5) + calc(4*.5rem)+25px));
   border: crimson solid 2px;
   margin-bottom: 2rem;
+}
+
+.gridfilms-ico {
+  /* clase del elemento i a centrar */
+  display: block;
+  margin-bottom: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0px;
+  border: solid 1px crimson;
 }
