--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;700&display=swap');
+
 :root {
-  --max-width: 900px;
+  /* --max-width: 900px; */
   --navbar-height: 3rem;
   --dark-color: #202125;
   --font-color: #565656;
@@ -12,6 +14,7 @@
 html,
 body {
   background: var(--dark-color);
+  font-family: 'Rubik', sans-serif;
 }
 
 body::-webkit-scrollbar {
