--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,15 +9,19 @@
 }
 
 .logo-img {
+  position: absolute;
   /* --navbar-height (3rem)
      logo (2rem)
      ~ 48*32/2=8
   */
   margin-top: 8px;
   margin-left: 8px;
+  cursor: pointer;
+  width: 2rem;
 }
 
 .navbar-list {
+  position: relative;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -26,6 +30,7 @@
 }
 
 .navbar-item {
+  position: relative;
   display: inline-block;
 }
 
@@ -77,14 +82,79 @@ i {
   outline: 0 none;
 }
 
-.logo-img {
+
+/* ----------------------- */
+
+label #open-menu,
+label #close-menu {
+  font-size: 1.7rem;
+  color: white;
+  float: right;
+  line-height: 3.125rem;
+  margin-right: .5rem;
   cursor: pointer;
-  width: 2rem;
-  margin-right: auto;
+  display: none;
+}
+
+#hidden-menu {
+  display: none;
+}
+
+.container-area {
+  height: 100vh;
+}
+
+@media all and (max-width: 870px) {
+
+  label #open-menu {
+    display: block;
+  }
+
+  .navbar-list {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: crimson;
+    top: var(--navbar-height);
+    left: -100%;
+    transition: .5s;
+    z-index: 10;
+  }
+
+  .navbar-list,
+  .navbar-item,
+  a {
+    display: block;
+  }
+
+  .navbar,
+  .navbar-list,
+  .navbar-item,
+  a {
+    font-size: 20px;
+  }
+
+
+  #hidden-menu:checked~ul {
+    left: 0;
+  }
+
+  #hidden-menu:checked~label #open-menu {
+    display: none;
+  }
+
+  #hidden-menu:checked~label #close-menu {
+    display: block;
+  }
+
+
 }
 
 /* small Navbar */
 
-@media all and (min-width: 768px) {
+@media all and (max-width: 768px) {
   .navbar {}
-}
+
+  .search-input {
+    display: none;
+  }
