--- a/css/filmGrid.css
+++ b/css/filmGrid.css
@@ -36,12 +36,12 @@
   align-items: center;
   justify-content: right;
   color: var(--paper-color);
-  text-align: center;
 }
 
 .gridfilms:hover .gridfilms-description {
   display: block;
   text-align: left;
+  padding: 0 1rem;
 }
 
 .gridfilms-fav {
@@ -68,8 +68,8 @@
 
 .comments-age {
   display: inline-block;
-  margin-top: 1em;
-  margin-bottom: 1em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
   color: var(--paper-color);
 }
 
@@ -86,7 +86,7 @@
 
 .comments-synopsis {
   display: inline-block;
-  margin-top: 0.5em;
+  margin-top: 0.3em;
   color: var(--paper-color);
 }
 
