--- a/css/filmGridNews.css
+++ b/css/filmGridNews.css
@@ -36,12 +36,12 @@
   align-items: center;
   justify-content: right;
   color: var(--paper-color);
-  text-align: center;
 }
 
 .gridfilms:hover .gridfilms-description {
   display: block;
   text-align: left;
+  padding: 0 1rem;
 }
 
 .gridfilms-play {
@@ -68,8 +68,8 @@
 
 .comments-age {
   display: inline-block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
   color: var(--paper-color);
 }
 
@@ -86,7 +86,7 @@
 
 .comments-synopsis {
   display: inline-block;
-  margin-top: 0.5em;
+  margin-top: 0.3em;
   color: var(--paper-color);
 }
 
@@ -112,4 +112,11 @@ hr {
   margin-right: auto;
   margin-top: 0px;
   border: solid 1px crimson;
+}
+
+@media screen and (max-width: 1319px) {
+  .container-gridfilms {
+    grid-template-columns: repeat(auto-fill, 250px);
+    gap: .3rem;
+  }
 }
