--- a/css/mediaQueries.css
+++ b/css/mediaQueries.css
@@ -24,3 +24,26 @@
     gap: .3rem;
   }
 }
+
+@media (min-width: 1120px) {
+  .login-form-container {
+    height: 50%;
+    width: 30%;
+  }
+}
+
+@media (min-width: 768px) {
+  .login-form>fieldset {
+    margin: 0 20px;
+  }
+
+  .login-form-container {
+    margin: auto;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1119px) {
+  .login-form-container {
+    width: 45%;
+  }
+}
