--- a/css/web.css
+++ b/css/web.css
@@ -1,7 +1,7 @@
 /* Mobile First */
 .header {
   grid-area: header;
-  border: 1px solid crimson;
+  border: 1px solid darkorange;
 }
 
 .section-films {
@@ -11,14 +11,24 @@
 
 .section-watchNext {
   grid-area: watchNext;
-  border: 1px solid crimson;
+  border: 1px solid greenyellow;
 }
 
 .footer {
   grid-area: footer;
-  border: 1px solid crimson;
+  border: 1px solid hotpink;
 }
 
 .section-title {
   text-transform: capitalize;
+}
+
+.wrapper {
+  display: grid;
+  gap: 1rem;
+  grid-template-areas:
+    "header"
+    "films"
+    "watchNext"
+    "footer";
 }
