--- a/css/web.css
+++ b/css/web.css
@@ -30,5 +30,44 @@
     "header"
     "films"
     "watchNext"
-    "footer";
+    "footer"
+  ;
+}
+
+/* Landscape */
+@media (min-width: 500px) {
+  .wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas:
+      "header    header"
+      "films     films"
+      "watchNext watchNext"
+      "footer    footer"
+    ;
+  }
+
+  .container-gridfilms {
+    display: grid;
+    /* grid-template-columns: repeat(5, minmax(250px, 500px)); */
+    grid-template-columns: repeat(2, 220px);
+    justify-content: center;
+    gap: .3rem;
+  }
+}
+
+/* screen width */
+@media (min-width: 768px) {
+  .ad {
+    display: initial;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr 1fr 4fr;
+    grid-template-areas:
+      "header    header    header"
+      "films     films     films"
+      "watchNext watchNext watchNext"
+      "footer    footer    footer"
+    ;
+  }
 }
