--- a/css/pageNotFound.css
+++ b/css/pageNotFound.css
@@ -1,8 +1,10 @@
 .container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
+  text-align: center;
   max-width: 100%;
+}
+
+.container .notFound {
+  width: 60%;
 }
 
 .container h1 {
