--- a/css/layout.css
+++ b/css/layout.css
@@ -12,8 +12,7 @@
 
 .content {
   grid-area: content;
-  border: 1px solid crimson;
-  /* Preguntar sobre footer y Navbar con Grid */
+  border: 1px solid rgb(24, 185, 24);
   /* min-height: 80vh; */
 }
 
