--- a/css/movieDescription.css
+++ b/css/movieDescription.css
@@ -1,8 +1,3 @@
-* {
-  color: white;
-  margin: .2rem;
-}
-
 /* Mobile First */
 
 .header {
@@ -30,8 +25,15 @@
   border: rgb(235, 231, 17) 1px solid;
 }
 
+.video {
+  object-fit: contain;
+}
 
-.articleGrid-img {
+.article-container {
+  display: flex;
+}
+
+.article-img {
   width: 5rem;
 }
 
@@ -39,4 +41,16 @@
   width: 400px;
   height: 200px;
   object-fit: cover;
+}
+
+.wrapper {
+  display: grid;
+  gap: 1rem;
+  grid-template-areas:
+    "header"
+    "section-video"
+    "section-description"
+    "aside-similar"
+    "footer"
+  ;
 }
