--- a/css/movieDescription.css
+++ b/css/movieDescription.css
@@ -39,11 +39,13 @@
 .article-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
 }
 
 .article-img {
   width: 5rem;
+  margin-right: .5rem;
+  margin-bottom: 2rem;
 }
 
 .aside-img {
