--- a/css/comingSoon.css
+++ b/css/comingSoon.css
@@ -1,4 +1,6 @@
+html,
 body {
+  height: 100%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
@@ -8,9 +10,9 @@ body {
 }
 
 .container {
-  width: 90%;
   margin: auto;
-  max-width: 100vw;
+  /* Control width... */
+  max-width: 36%;
   overflow: hidden;
 }
 
@@ -36,7 +38,7 @@ body {
   color: var(--paper-color);
   background-color: var(--element-color);
   text-align: center;
-  /* font-size: 1.2rem; */
+  font-size: 1.5rem;
 }
 
 .footer .link-button {
